# cargo-leap

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml  codecov.yml  deps.yml  release.yml  rust.yml  security.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh
leap/: Cargo.toml
man/en_us/: help_leap.txt  help_leap_new.txt
src/: main.rs
src/app/: commands.rs  config.rs  download.rs  fs.rs  mod.rs  registry.rs  zip.rs
