[package]
name = "cargo-leap"
version = "0.1.1"
authors = ["Daniel Samson"]
edition = "2018"
description = "A cargo subcommand for generating new projects."
repository = "https://github.com/daniel-samson/cargo-leap.git"
readme = "README.md"
documentation = "https://docs.rs/cargo-leap"
homepage = "https://leap.rs"
license = "Apache-2.0"
keywords = ["cargo", "subcommand", "framework"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates_io_api = "0.6.0"
async-std = "1.5.0"
bytes = "0.5.4"
directories = "2.0"
env_logger = "0.7.1"
log = "0.4.0"
semver = {version = "0.7.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "1.0"
toml = "0.5"
archiver-rs = "0.5.0"
